@@ -1,3 +1,4 @@
 <settings>
+   <setting id="sa_nice" value="10" />
    <setting id="sabnzbd_server" value="0.0.0.0:8085" />
 </settings>
